--- a/view.html
+++ b/view.html
@@ -234,9 +234,8 @@
                     [2, 1], [1, 1], 'fluid'
                 ])
                 .addSize([0, 0], [
-                    [336, 280], [320, 480],
+                    [336, 280], [300, 250], [320, 480],
                     [320, 100], [320, 50],
-                    [300, 250], [250, 250], [200, 200],
                     [2, 1], [1, 1], 'fluid'
                 ])
                 .build();
@@ -518,8 +517,8 @@
             //     좌측 번호 영역에는 숫자 대신 "AD" 라벨이 노출됩니다.
             //   · CSS 카운터에서 제외되므로 기사 번호(1~5)는 광고 유무와 관계없이
             //     항상 자연스럽게 연속성을 유지합니다.
-            //   · shufflePopularNewsNativeAds()에서 기사/광고가 랜덤하게 섞이지만,
-            //     첫 번째 기사(1번)는 고정으로 유지합니다.
+            //   · shufflePopularNewsNativeAds()에서 "기사 순서는 고정"된 상태에서
+            //     광고만 기사 사이의 여러 위치 중 랜덤하게 섞입니다.
             // ------------------------------------------------------------------
             if (deviceCategory === 'mobile' || deviceCategory === 'tablet') {
                 const BC_native_list_1_slot = googletag.defineSlot(
@@ -818,8 +817,11 @@
              3) 광고 LI(.native-ad-list-item)는
                 counter-increment: none + content: "AD" 로 재정의
                 → CSS 카운터 증가에서 제외되며, 기사 번호 1~5는 항상 연속 유지
-             4) JS shufflePopularNewsNativeAds()가 기사/광고의 DOM 순서를 섞어도
-                카운터는 "기사 LI만" 기준으로 재계산되어 UX가 깨지지 않습니다.
+             4) JS shufflePopularNewsNativeAds():
+                · "기사 LI 순서"는 그대로 유지한 상태에서
+                  광고 LI(BC_native_list_1/2)를 기사 사이 여러 위치 중 랜덤하게 삽입
+                · 따라서 기사 카운트/노출 순서는 항상 고정되면서
+                  광고 위치만 무작위로 바뀌는 구조입니다.
         ------------------------------------------------------------------ */
         .related-list {
             list-style-type: none;
@@ -1167,8 +1169,9 @@
 
                         - 기사 LI(5개):
                           · CSS 카운터(hotNewsRank)에 의해 1~5 번호 자동 생성
+                          · shufflePopularNewsNativeAds() 이후에도 기사 DOM 순서/번호는 항상 고정
                         - Native LI(BC_native_list_1/2):
-                          · shufflePopularNewsNativeAds()에서 기사 사이에 섞여 들어감
+                          · 기사 LI 사이의 여러 "틈(gap)" 중 랜덤 위치에 삽입
                           · 좌측 번호 영역에는 숫자 대신 "AD" 라벨 표시
                           · 기사 개수 카운트에는 포함되지 않음
                     -->
@@ -1400,7 +1403,7 @@
                     }
                 });
 
-                // GPT स्लॉट 객체도 함께 정리
+                // GPT 슬롯 객체도 함께 정리
                 if (window.googletag && googletag.cmd) {
                     googletag.cmd.push(function () {
                         const allSlots = googletag.pubads().getSlots();
@@ -1589,15 +1592,29 @@
         // ==========================================================
         // 함수 3. "이 시각 주요 뉴스" 내 Native Ad 슬롯 랜덤 배치
         //
-        // - 우측 '이 시각 주요 뉴스' 목록 내에서:
-        //   · 첫 번째 기사(1번)는 항상 고정
-        //   · 나머지 기사 + Native 광고(BC_native_list_1/2)를 섞어서(random shuffle)
-        //     노출 순서를 랜덤화합니다.
+        // - 요구사항 정리
+        //   · 뉴스 목록(기사 LI)의 "순서"와 "번호"는 항상 고정
+        //     → HTML에 정의된 기사 순서를 그대로 유지
+        //   · 광고 LI(BC_native_list_1, BC_native_list_2)만
+        //     기사 사이의 여러 후보 위치 중 랜덤하게 삽입
+        //   · CSS 카운터 구조와 결합하여
+        //     기사 번호는 1~5로 연속 유지, 광고는 "AD"로만 표시
         //
-        // - CSS 카운터 구조와의 연계:
-        //   · JS는 단순히 LI 순서만 섞고, 실제 번호 부여/AD 표시는
-        //     CSS(.related-list li::before / .native-ad-list-item::before)에서 담당합니다.
-        //   · 따라서 기사/광고 섞임 여부와 관계없이 번호/AD 라벨 규칙이 항상 유지됩니다.
+        // - 구현 방식
+        //   1) UL(.related-list) 하위 LI를 기사/광고로 분리
+        //   2) 기사 LI 배열(articleItems)의 순서는 절대 변경하지 않음
+        //   3) "기사 사이 틈(gap)" 목록을 구성
+        //      · gap index = 1 ~ (기사 개수 - 1)
+        //      · 예: 기사 5개 → gap 후보는 [1,2,3,4]
+        //      · gap = 2 라는 의미는 "2번 기사 뒤"를 의미
+        //   4) 광고 개수만큼 gap을 랜덤 선택 + 광고 배열 자체도 랜덤 셔플
+        //   5) 새 UL을 구성할 때:
+        //      · 기사 i를 append
+        //      · 만약 i 뒤에 광고를 넣기로 한 gap이면, 그 다음에 광고 LI를 append
+        //
+        // - 결과
+        //   · 기사 노출 순서/번호: 항상 동일
+        //   · 광고 위치/순서: 페이지 로드마다 무작위
         // ==========================================================
         function shufflePopularNewsNativeAds() {
             const relatedList = document.querySelector('.related-list');
@@ -1605,24 +1622,74 @@
 
             const allItems = Array.from(relatedList.children);
             const isAd = (item) => item.id && item.id.startsWith('BC_native');
+
             const articleItems = allItems.filter(item => !isAd(item));
             const adItems = allItems.filter(item => isAd(item));
 
-            // 첫 번째 기사는 항상 고정
-            const firstArticle = articleItems.shift();
-            const remainingItems = [...articleItems, ...adItems];
-
-            // 간단한 Fisher–Yates 셔플
-            for (let i = remainingItems.length - 1; i > 0; i--) {
-                const j = Math.floor(Math.random() * (i + 1));
-                [remainingItems[i], remainingItems[j]] = [remainingItems[j], remainingItems[i]];
+            // 기사 또는 광고가 아예 없으면 로직 수행 의미가 없음
+            if (articleItems.length === 0 || adItems.length === 0) {
+                return;
             }
 
+            // 기존 내용 초기화
             relatedList.innerHTML = '';
-            if (firstArticle) {
-                relatedList.appendChild(firstArticle);
+
+            const articleCount = articleItems.length;
+
+            // [1] "기사 사이 gap" 후보 생성 (1 ~ articleCount-1)
+            //     - gap = n 이라는 의미는 "n번 기사 뒤"라는 의미
+            const gapIndices = [];
+            for (let i = 1; i < articleCount; i++) {
+                gapIndices.push(i);
             }
-            remainingItems.forEach(item => relatedList.appendChild(item));
+
+            // [2] gap 후보들을 무작위 셔플(Fisher–Yates)
+            const gapsShuffled = [...gapIndices];
+            for (let i = gapsShuffled.length - 1; i > 0; i--) {
+                const j = Math.floor(Math.random() * (i + 1));
+                [gapsShuffled[i], gapsShuffled[j]] = [gapsShuffled[j], gapsShuffled[i]];
+            }
+
+            // [3] 광고 개수만큼 gap 사용 (gap 수보다 광고가 많으면, gap 수만큼만 사용)
+            const useGapCount = Math.min(adItems.length, gapsShuffled.length);
+            const selectedGaps = gapsShuffled
+                .slice(0, useGapCount)
+                .sort((a, b) => a - b); // 기사 순회 시 비교를 위해 오름차순 정렬
+
+            // [4] 광고 자체 순서도 무작위 셔플
+            const shuffledAds = [...adItems];
+            for (let i = shuffledAds.length - 1; i > 0; i--) {
+                const j = Math.floor(Math.random() * (i + 1));
+                [shuffledAds[i], shuffledAds[j]] = [shuffledAds[j], shuffledAds[i]];
+            }
+
+            let adIndex = 0;          // 다음에 사용할 광고 인덱스
+            let gapIndexCursor = 0;   // selectedGaps 순회용 커서
+
+            // [5] 기사 순서를 그대로 유지하면서, 선택된 gap 위치 뒤에만 광고 삽입
+            for (let i = 0; i < articleCount; i++) {
+                // (1) 기사 append
+                relatedList.appendChild(articleItems[i]);
+
+                // (2) 만약 "현재 기사(i+1) 뒤"가 선택된 gap이라면 광고 append
+                if (
+                    gapIndexCursor < selectedGaps.length &&
+                    selectedGaps[gapIndexCursor] === i + 1 &&
+                    adIndex < shuffledAds.length
+                ) {
+                    relatedList.appendChild(shuffledAds[adIndex]);
+                    adIndex++;
+                    gapIndexCursor++;
+                }
+            }
+
+            // [선택적 안전장치] gap보다 광고가 더 많은 극단적 케이스:
+            //  - 남은 광고가 있다면 마지막 기사 뒤에 순차적으로 붙임
+            //  - 기사 순서는 여전히 변경되지 않으므로 요구사항 위배 없음
+            while (adIndex < shuffledAds.length) {
+                relatedList.appendChild(shuffledAds[adIndex]);
+                adIndex++;
+            }
         }
 
         // ==========================================================
@@ -1648,13 +1715,13 @@
         // - 실행 순서:
         //   1) setupInArticleAds()           → 본문 내 in-article 동적 배치 + 미사용 슬롯 제거
         //   2) setupLazyLoading()            → Lazy 대상 슬롯 수집 + GAM 슬롯 매핑 + Observer 생성
-        //   3) shufflePopularNewsNativeAds() → 우측 '이 시각 주요 뉴스' + Native 섞기
+        //   3) shufflePopularNewsNativeAds() → 우측 '이 시각 주요 뉴스' 내 Native 광고 랜덤 배치
         //   4) startObservingLazySlots()     → IntersectionObserver 관찰 시작
         // ==========================================================
         document.addEventListener('DOMContentLoaded', function () {
             setupInArticleAds();             // 본문 in-article 광고 동적 주입
             setupLazyLoading();              // Lazy Load 대상 수집 및 Observer 초기화
-            shufflePopularNewsNativeAds();   // 우측 '이 시각 주요 뉴스' 내 Native 광고 랜덤 배치
+            shufflePopularNewsNativeAds();   // 우측 '이 시각 주요 뉴스' 내 Native 광고 랜덤 배치 (기사 순서 고정, 광고만 셔플)
             startObservingLazySlots();       // Lazy 대상 슬롯 관찰 시작
         });
     </script>
