--- a/3rd-party-creatives/reo_dark.html
+++ b/3rd-party-creatives/reo_dark.html
@@ -4,86 +4,87 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
-        /* 1. Iframe 환경 초기화 */
+        /* [전역 설정] 요청에 따라 다크모드 배경색을 #1d1d1d로 고정 */
         html, body { 
-            background: transparent !important; 
-            margin: 0; padding: 0; 
-            -webkit-text-size-adjust: none; 
+            background: #1d1d1d !important; 
+            margin: 0px !important; 
+            padding: 0px !important; 
+            -webkit-text-size-adjust: none !important; 
         }
-        body, h4, ul, li { margin: 0; padding: 0; }
-        * { box-sizing: border-box; }
+        h4, ul, li { margin: 0px !important; padding: 0px !important; }
+        * { box-sizing: border-box !important; }
         
-        /* 2. 전체 컨테이너 및 폰트 설정 */
+        /* [폰트 및 레이아웃] */
         #mk_native_ad_wrap { 
             width: 100%; 
             text-align: left; 
             font-family: 'Pretendard Variable', 'Pretendard', 'Malgun Gothic', sans-serif; 
             -webkit-font-smoothing: antialiased; 
         }
-        .ad_box { list-style: none; }
+        .ad_box { list-style: none !important; }
 
-        /* 3. 개별 행 레이아웃 (다크모드 전용 경계선 컬러) */
+        /* [개별 행 스타일] 다크모드 표준 구분선 컬러 #464646 */
         .ad_item { 
             border-bottom: 1px solid #464646 !important; 
-            height: 80px; 
-            display: flex; 
-            align-items: center; 
-            overflow: hidden;
+            height: 80px !important; 
+            display: flex !important; 
+            align-items: center !important; 
+            overflow: hidden !important;
         }
         .ad_item:last-child { border-bottom: none !important; }
 
-        /* 4. 클릭 영역 및 텍스트 박스 */
+        /* [클릭 영역] */
         .ad_link { 
-            display: flex; 
-            align-items: center; 
-            width: 100%; 
-            height: 100%; 
-            padding: 0 10px !important; 
-            text-decoration: none; 
+            display: flex !important; 
+            align-items: center !important; 
+            width: 100% !important; 
+            height: 100% !important; 
+            padding: 0px 10px !important; 
+            text-decoration: none !important; 
         }
 
-        /* 5. 텍스트 상세 스타일 (다크모드용 컬러 #f0f0f0) */
+        /* [텍스트] 다크모드 표준 글자색 #f0f0f0, 크기 17px 고정 */
         .ad_title { 
-            margin: 0; 
+            margin: 0px !important; 
             color: #f0f0f0 !important; 
             font-size: 17px !important; 
             font-weight: 600 !important; 
             line-height: 25px !important; 
-            letter-spacing: -0.05em !important;
-            display: -webkit-box; 
-            -webkit-line-clamp: 2; 
-            -webkit-box-orient: vertical;
-            overflow: hidden; 
-            text-overflow: ellipsis;
-            position: relative;
-            top: 1px;
+            letter-spacing: -0.85px !important;
+            display: -webkit-box !important; 
+            -webkit-line-clamp: 2 !important; 
+            -webkit-box-orient: vertical !important;
+            overflow: hidden !important; 
+            text-overflow: ellipsis !important;
+            position: relative !important;
+            top: 1px !important;
         }
 
-        /* 6. 다크모드용 주황색 블릿 (컬러 #FF891C) */
+        /* [블릿] 다크모드 표준 포인트 오렌지 #FF891C */
         .ad_title::before { 
-            content: '·'; 
+            content: '·' !important; 
             color: #FF891C !important; 
             font-weight: 900 !important; 
-            font-size: 24px !important; 
-            margin-right: 8px; 
-            line-height: 1;
+            font-size: 28px !important; 
+            margin-right: 8px !important; 
+            line-height: 1 !important;
         }
 
-        /* 7. 인터랙션 */
-        .ad_link:hover .ad_title { opacity: 0.6; transition: 0.2s; }
+        /* [인터랙션] */
+        .ad_link:hover .ad_title { opacity: 0.6 !important; transition: 0.2s !important; }
     </style>
 </head>
 <body>
     <div id="mk_native_ad_wrap">
         <ul class="ad_box">
             <li class="ad_item">
-                <a href="광고링크1" target="_blank" class="ad_link"><h4 class="ad_title">다크모드 첫 번째 광고 텍스트입니다.</h4></a>
+                <a href="광고링크1" target="_blank" class="ad_link"><h4 class="ad_title">다크모드 전용 텍스트 첫 번째 줄입니다 (#1d1d1d 배경)</h4></a>
             </li>
             <li class="ad_item">
-                <a href="광고링크2" target="_blank" class="ad_link"><h4 class="ad_title">어두운 테마에서도 선명한 가독성을 제공하며 px로 크기를 고정했습니다.</h4></a>
+                <a href="광고링크2" target="_blank" class="ad_link"><h4 class="ad_title">모든 수치가 px로 고정되어 환경 변화에도 크기가 일정합니다</h4></a>
             </li>
             <li class="ad_item">
-                <a href="광고링크3" target="_blank" class="ad_link"><h4 class="ad_title">3줄 구성으로 뉴스 목록과 시각적으로 완전히 동기화됩니다.</h4></a>
+                <a href="광고링크3" target="_blank" class="ad_link"><h4 class="ad_title">어두운 테마 기사 목록과 시각적으로 완전히 동기화됩니다</h4></a>
             </li>
         </ul>
     </div>
