--- a/3rd-party-creatives/reo_light.html
+++ b/3rd-party-creatives/reo_light.html
@@ -4,86 +4,87 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
-        /* 1. Iframe 환경 초기화 */
+        /* [전역 초기화] 모든 브라우저 기본 여백 제거 및 자동 확대 방지 */
         html, body { 
             background: transparent !important; 
-            margin: 0; padding: 0; 
-            -webkit-text-size-adjust: none; 
+            margin: 0px !important; 
+            padding: 0px !important; 
+            -webkit-text-size-adjust: none !important; 
         }
-        body, h4, ul, li { margin: 0; padding: 0; }
-        * { box-sizing: border-box; }
+        h4, ul, li { margin: 0px !important; padding: 0px !important; }
+        * { box-sizing: border-box !important; }
         
-        /* 2. 전체 컨테이너 및 폰트 설정 */
+        /* [폰트 및 레이아웃] */
         #mk_native_ad_wrap { 
             width: 100%; 
             text-align: left; 
             font-family: 'Pretendard Variable', 'Pretendard', 'Malgun Gothic', sans-serif; 
             -webkit-font-smoothing: antialiased; 
         }
-        .ad_box { list-style: none; }
+        .ad_box { list-style: none !important; }
 
-        /* 3. 개별 행 레이아웃 (t_topnews_v 스타일 이식) */
+        /* [개별 행 스타일] t_topnews_v 높이 80px 및 하단선 적용 */
         .ad_item { 
             border-bottom: 1px solid #dadada !important; 
-            height: 80px; 
-            display: flex; 
-            align-items: center; 
-            overflow: hidden;
+            height: 80px !important; 
+            display: flex !important; 
+            align-items: center !important; 
+            overflow: hidden !important;
         }
         .ad_item:last-child { border-bottom: none !important; }
 
-        /* 4. 클릭 영역 및 텍스트 박스 */
+        /* [클릭 영역] 전체 행을 클릭 가능하게 설정 */
         .ad_link { 
-            display: flex; 
-            align-items: center; 
-            width: 100%; 
-            height: 100%; 
-            padding: 0 10px !important; 
-            text-decoration: none; 
+            display: flex !important; 
+            align-items: center !important; 
+            width: 100% !important; 
+            height: 100% !important; 
+            padding: 0px 10px !important; 
+            text-decoration: none !important; 
         }
 
-        /* 5. 텍스트 상세 스타일 (px 단위 고정) */
+        /* [텍스트 상세] 17px 고정, 행간 25px, 2줄 제한 */
         .ad_title { 
-            margin: 0; 
+            margin: 0px !important; 
             color: #212121 !important; 
-            font-size: 17px !important; /* t_topnews_v 표준 크기 */
+            font-size: 17px !important; 
             font-weight: 600 !important; 
-            line-height: 25px !important; /* t_topnews_v 행간 재현 */
-            letter-spacing: -0.05em !important;
-            display: -webkit-box; 
-            -webkit-line-clamp: 2; 
-            -webkit-box-orient: vertical;
-            overflow: hidden; 
-            text-overflow: ellipsis;
-            position: relative;
-            top: 1px; /* 텍스트 베이스라인 미세 조정 */
+            line-height: 25px !important; 
+            letter-spacing: -0.85px !important;
+            display: -webkit-box !important; 
+            -webkit-line-clamp: 2 !important; 
+            -webkit-box-orient: vertical !important;
+            overflow: hidden !important; 
+            text-overflow: ellipsis !important;
+            position: relative !important;
+            top: 1px !important;
         }
 
-        /* 6. 주황색 블릿 (t_badge 스타일) */
+        /* [블릿] MK 시그니처 주황색 포인트 블릿 */
         .ad_title::before { 
-            content: '·'; 
+            content: '·' !important; 
             color: #FF7A00 !important; 
             font-weight: 900 !important; 
-            font-size: 24px !important; 
-            margin-right: 8px; 
-            line-height: 1;
+            font-size: 28px !important; 
+            margin-right: 8px !important; 
+            line-height: 1 !important;
         }
 
-        /* 7. 인터랙션 */
-        .ad_link:hover .ad_title { opacity: 0.6; transition: 0.2s; }
+        /* [인터랙션] 호버 시 투명도 변화 */
+        .ad_link:hover .ad_title { opacity: 0.6 !important; transition: 0.2s !important; }
     </style>
 </head>
 <body>
     <div id="mk_native_ad_wrap">
         <ul class="ad_box">
             <li class="ad_item">
-                <a href="광고링크1" target="_blank" class="ad_link"><h4 class="ad_title">첫 번째 라이트모드 광고 텍스트입니다.</h4></a>
+                <a href="광고링크1" target="_blank" class="ad_link"><h4 class="ad_title">라이트모드 텍스트 첫 번째 줄입니다</h4></a>
             </li>
             <li class="ad_item">
-                <a href="광고링크2" target="_blank" class="ad_link"><h4 class="ad_title">두 번째 광고 줄이며 px 단위로 크기를 17px로 고정했습니다.</h4></a>
+                <a href="광고링크2" target="_blank" class="ad_link"><h4 class="ad_title">모든 수치를 px로 고정하여 주변 리스트와 완벽히 일치합니다</h4></a>
             </li>
             <li class="ad_item">
-                <a href="광고링크3" target="_blank" class="ad_link"><h4 class="ad_title">세 번째 광고 줄까지 주변 뉴스 리스트와 완벽히 정렬됩니다.</h4></a>
+                <a href="광고링크3" target="_blank" class="ad_link"><h4 class="ad_title">세 번째 광고 줄이며 기사와 동일한 가독성을 제공합니다</h4></a>
             </li>
         </ul>
     </div>
